# modemu2k

./: .clang-format  .gitignore  .travis-before_install.sh  .travis.yml  AUTHORS  CLAUDE.md  CONTRIBUTING.md  ChangeLog  Doxyfile  Doxyfile.in  HACKING.md  Makefile  Makefile.am  Makefile.in  NEWS  QUICKSTART.md  README  README.md  ReleaseNotes  TRANSLATE.md  aclocal.m4  commx.c  commx.h  config.in  configure  configure.ac  defs.h  depend  example_minicom.sh  index.html  meson.build  meson_options.txt  modemu.1  modemu.c  modemu2k-0.0.2.lsm  modemu2k.1  modemu2k.1.in  modemu2k.c  modemu2k.h  sock.c  (+3 more)
.github/scripts/: test_m2k.sh
.github/workflows/: appimage.yml  bsd.yml  c-cpp.yml  codeql-analysis.yml  coverity.yml  deb.yml  docs.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: annotated.html  classes.html  cmdarg_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9af45d131020b648bcf063ed4619a7a5.html  doxygen-custom.css  doxygen_crawl.html  files.html  functions.html  functions_vars.html  gettext_8h_source.html  globals.html  globals_eval.html  globals_func.html  globals_type.html  index.html  md_TRANSLATE.html  menudata.js  modemu2k_8h.html  modemu2k_8h_source.html  pages.html  src_2modemu2k_8h_source.html  structAtcmd.html  structTelOptState.html  structTelOptStates.html  structcmdBuf.html  structst__cmdarg.html  structst__sock.html  structst__sockBufR.html  structst__sockBufW.html  structst__telOpt.html  structst__tty.html  structst__ttyBufR.html  structst__ttyBufW.html
docs/html/: atcmdD-example.html  classes.html  examples.html  files.html  gettext_8h_source.html  globals.html  globals_func.html  index.html  modemu2k_8h.html  modemu2k_8h_source.html  structAtcmd.html  structst__sock.html
docs/latex/: annotated.tex  atcmdD-example.tex  examples.tex  files.tex  index.tex  md_TRANSLATE.tex  modemu2k_8h.tex  refman.tex  structAtcmd.tex  structTelOptState.tex  structTelOptStates.tex  structcmdBuf.tex  structst__cmdarg.tex  structst__sock.tex  structst__sockBufR.tex  (+5 more)
doxygen/: Doxyfile.in  DoxygenLayout.xml  changelog.md  header.html  man-to-fragment.sh  manpage.md  meson.build
examples/: m2k-minicom.sh  m2k_describe_state.c  m2k_dial.c  m2k_set_error_buffer.c  m2k_set_log_fn.c  m2k_setup_answer.c  m2k_setup_comm_program.c  m2k_setup_commx.c  m2k_setup_listen.c  meson.build  xc-sends-mail
man/: Makefile.am  Makefile.in  meson.build  modemu2k.1  modemu2k.it.1  modemu2k.it_IT.1  modemu2k.pt_BR.1
packaging/: PKGBUILD  file_id.diz  release-process.txt
po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  meson.build  modemu2k.pot  nl_NL.gmo  nl_NL.po  zh_CN.gmo  zh_CN.po
scripts/: Makefile.am  Makefile.in  m2k-minicom  m2k-minicom.in  m2k-minicom.sh.in  m2k-picocom  m2k-picocom.in  meson.build  publish-docs.in  reformat.sh
src/: Makefile.am  Makefile.in  atcmd.c  atcmd.h  cmdarg.c  cmdarg.h  cmdlex.c  cmdlex.h  cmdlex.l  comm_program.c  commx.c  commx.h  defs.h  lex.yy.c  libmodemu2k.map  m2k_api.c  m2k_ctx.h  m2k_private.h  m2k_setup.c  m2k_step.c  main.c  meson.build  modemu2k.c  modemu2k.h  sock.c  sock.h  sockbuf.c  sockbuf.h  stty.c  stty.h  telopt.c  telopt.h  timeval.c  timeval.h  ttybuf.c  ttybuf.h  utils.c  utils.h  verbose.c  verbose.h
tests/: Makefile.am  Makefile.in  README  README.md  connect.c  getNumArg.c  meson.build  test.h  test_answer.c  test_app_io.c  test_atcmd.c  test_comm_program.c  test_connect.c  test_describe.c  test_dial_crlf.c  test_dial_integration.py  test_dial_step.c  test_docker_telnet.py  test_error_buffer.c  test_helpers.c  test_helpers.h  test_ipv6.c  test_listen.c  test_listen_integration.py  test_listen_ipv6.c  test_localhost.c  test_log_level.c  test_no_arg_usage.sh  test_options.sh  test_sockbuf.c  test_telopt.c  test_timeval.c  test_ttybuf.c  test_verbose.sh
v0.1.0/: annotated.html  cmdarg_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  md_TRANSLATE.html  modemu2k_8h_source.html  structTelOptState.html  structTelOptStates.html  structst__sock.html  structst__tty.html
v0.2.0/: annotated.html  changelog.html  classes.html  cmdarg_8h_source.html  deprecated.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9af45d131020b648bcf063ed4619a7a5.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen-custom.css  doxygen_crawl.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  include_2modemu2k_2modemu2k_8h.html  include_2modemu2k_2modemu2k_8h_source.html  index.html  m2k__ctx_8h_source.html  main_8c-example.html  manpage.html  md_HACKING.html  md_QUICKSTART.html  md__2home_2runner_2work_2modemu2k_2modemu2k_2HACKING.html  md__2home_2runner_2work_2modemu2k_2modemu2k_2QUICKSTART.html  menudata.js  modemu2k_8h.html  modemu2k_8h_source.html  pages.html  src_2modemu2k_8h.html  src_2modemu2k_8h_source.html  structAtcmd.html  structTelOptState.html  structTelOptStates.html  (+10 more)
v0.2.1/: changelog.html  deprecated.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  doxygen-custom.css  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  main_8c-example.html  manpage.html  md_HACKING.html  md_QUICKSTART.html  modemu2k_8h.html  modemu2k_8h_source.html  pages.html
v0.2.2/: changelog.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  files.html  globals_defs.html  globals_type.html  index.html  md_HACKING.html  md_QUICKSTART.html  modemu2k_8h.html  modemu2k_8h_source.html
v0.2.x/: changelog.html  deprecated.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  doxygen_crawl.html  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  main_8c-example.html  manpage.html  md_HACKING.html  md_QUICKSTART.html  menudata.js  modemu2k_8h.html  modemu2k_8h_source.html  pages.html
(+146 files in other folders)
