# Files in this directory that the doxygen-html custom_target depends on.
# Exposed as `doxygen_inputs` for the top-level meson.build to splice into
# `depend_files:` without each entry needing a `doxygen/` prefix.
doxygen_inputs = files(
  'changelog.md',
  'manpage.md',
  'man-to-fragment.sh',
  'header.html',
  'footer.html',
  'doxygen-custom.css',
  'DoxygenLayout.xml',
)
